gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/fail22634.d
version https://git-lfs.github.com/spec/v1
oid sha256:52828e5678dc0d32afd79c2e76175aaa23e07052f43296c216f07fa1058f1341
size 175
